--- a/index.html
+++ b/index.html
@@ -1,57 +1,111 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Evergreen Eagle E-Transit | Investor Portal</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Evergreen Eagle E-Transit</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      background-color: #f4f4f4;
+      color: #222;
+    }
+    header {
+      background-color: #015c25;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    section {
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+    h2 {
+      color: #015c25;
+    }
+    form {
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    input, textarea, select {
+      width: 100%;
+      padding: 0.7rem;
+      margin: 0.5rem 0;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background-color: #015c25;
+      color: white;
+      padding: 0.7rem 1.2rem;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      padding: 1rem;
+      background-color: #eee;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Evergreen Eagle E-Transit</h1>
-    <p>Sustainable, Affordable & Emission-Free University Transport</p>
-  </header>  <section class="why">
-    <h2>Why Evergreen?</h2>
-    <p>We're not just another bus company. Evergreen is committed to zero emissions, affordable transportation, and long-term operational sustainability within Federal University Lokoja in Kogi State. Our electric buses offer quiet, reliable, and green mobility, solving the crisis of high transport costs and gasoline dependency in campus transport.</p>
-  </section>  <section class="about">
+    <p>Smart, Affordable, Zero-Emission Transport for Federal University Lokoja</p>
+  </header>
+
+  <section>
     <h2>About Us</h2>
-    <p>Evergreen Eagle E-Transit operates 30–50 seater luxury electric buses, specifically tailored for Nigerian university campuses. We integrate solar-supplemented charging grids for reduced operational costs. Our service ensures clean, affordable transport that endures – benefiting students, the university, and the environment.</p>
-  </section>  <section class="benefits">
-    <h2>What You Gain</h2>
+    <p>
+      Evergreen Eagle E-Transit is building a clean, affordable, and long-lasting electric bus system to serve students and staff of Federal University Lokoja. With zero emissions and luxurious 30–50 passenger capacity coaches, we are redefining sustainable campus mobility.
+    </p>
+  </section>
+
+  <section>
+    <h2>Why Evergreen?</h2>
     <ul>
-      <li>Eco-friendly investment with long-term ROI</li>
-      <li>First-mover advantage in a scalable transport model</li>
-      <li>Partnership with a university-backed model</li>
-      <li>Real-time performance insights and tracking</li>
-      <li>Visible social impact & innovation branding</li>
+      <li>100% Zero-emission electric buses</li>
+      <li>Lower cost per trip than fuel-based transport</li>
+      <li>Durable, long-term service value</li>
+      <li>Smart AI-based route management (future integration)</li>
     </ul>
-  </section>  <section class="form">
+  </section>
+
+  <section>
+    <h2>Funding Goal</h2>
+    <p>
+      We’re currently raising between <strong>$1M–$1.5M USD</strong> to acquire 30–50 passenger luxury electric buses and fast-charging grid stations to power our launch at FUL.
+    </p>
+    <p>
+      Raise Type: <strong>Debt / Equity</strong>
+    </p>
+  </section>
+
+  <section>
     <h2>Investor Application</h2>
-    <form action="#" method="post">
-      <label for="name">Full Name</label>
-      <input type="text" id="name" name="name" required><label for="email">Email</label>
-  <input type="email" id="email" name="email" required>
+    <form>
+      <input type="text" placeholder="Full Name" required />
+      <input type="email" placeholder="Email Address" required />
+      <input type="text" placeholder="Phone Number" required />
+      <select required>
+        <option value="">Type of Investment</option>
+        <option value="equity">Equity</option>
+        <option value="debt">Debt</option>
+        <option value="mixed">Mixed</option>
+      </select>
+      <textarea placeholder="Tell us why you're interested" rows="4" required></textarea>
+      <button type="submit">Apply Now</button>
+    </form>
+  </section>
 
-  <label for="phone">Phone Number</label>
-  <input type="tel" id="phone" name="phone" required>
-
-  <label for="amount">Potential Investment Amount (USD)</label>
-  <input type="number" id="amount" name="amount" required>
-
-  <label for="type">Type of Raise</label>
-  <select id="type" name="type">
-    <option value="equity">Equity</option>
-    <option value="debt">Debt</option>
-    <option value="mixed">Mixed</option>
-  </select>
-
-  <label for="message">Additional Message</label>
-  <textarea id="message" name="message" rows="4"></textarea>
-
-  <button type="submit">Submit Application</button>
-</form>
-
-  </section>  <footer>
-    <p>Contact: evergreenetransit@gmail.com | 09155091742, 08101804244</p>
+  <footer>
+    Contact: evergreenetransit@gmail.com | 09155091742, 08101804244
   </footer>
 </body>
 </html>
