Grid split update

--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
       Evergreen Eagle E-Transit is building a clean, affordable, and long-lasting electric bus system to serve students and staff of Federal University Lokoja. With zero emissions and luxurious 30–50 passenger capacity coaches, we are redefining sustainable campus mobility.
     </p>
   </section>
-
+<section class="image-grid">
+  <img src="istockphoto-2181454736-612x612.webp" alt="Electric Bus 1" />
+  <img src="pexels-photo-5223501.jpeg" alt="Charging Station 1" />
+  <img src="photo-1509749837427-ac94a2553d0e.jpeg" alt="Electric Bus 2" />
+</section>
   <section>
     <h2>Why Evergreen?</h2>
     <ul>
