--- a/index.html
+++ b/index.html
@@ -52,6 +52,33 @@
       padding: 1rem;
       background-color: #eee;
     }
+     /* Additional Styles for Spacing */
+    section {
+      padding: 3rem;
+      max-width: 900px;
+      margin: auto;
+      margin-bottom: 2rem;
+    }
+
+    .image-grid img {
+      margin-bottom: 1rem; /* Adds space between images */
+    }
+
+    form {
+      background-color: #fff;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      margin-top: 2rem;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 1rem;
+      padding: 1.5rem;
+      background-color: #015c25;
+      color: white;
+    }
     .image-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
