--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
   <header>
     <h1>Evergreen Eagle E-Transit</h1>
     <p>Smart, Affordable, Zero-Emission Transport for Federal University Lokoja</p>
+    <div style="text-align: center; margin-top: 1rem;">
+  <img src="ezgif-114cfb748a5bde.gif" alt="Electric Bus Animation" style="max-width: 100%; height: auto; border-radius: 10px;">
+    </div>
   </header>
 
   <section>
@@ -104,6 +107,9 @@
     <p>
       Evergreen Eagle E-Transit is building a clean, affordable, and long-lasting electric bus system to serve students and staff of Federal University Lokoja. With zero emissions and luxurious 30–50 passenger capacity coaches, we are redefining sustainable campus mobility.
     </p>
+    <div style="text-align: center; margin-top: 1rem;">
+  <img src="ezgif-17cd8e78eb9fab.gif" alt="About Us Animation" style="max-width: 100%; height: auto; border-radius: 10px;">
+    </div>
   </section>
 <section class="image-grid">
   <img src="istockphoto-2181454736-612x612.webp" alt="Electric Bus 1" />
@@ -118,6 +124,9 @@
       <li>Durable, long-term service value</li>
       <li>Smart AI-based route management (future integration)</li>
     </ul>
+    <div style="text-align: center; margin-top: 1rem;">
+  <img src="ezgif-15a035bf0b599a.gif" alt="Features Animation" style="max-width: 100%; height: auto; border-radius: 10px;">
+    </div>
   </section>
 
   <section>
@@ -163,6 +172,10 @@
   </div>
 </section>
   <footer>
+    <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 1rem; margin: 2rem 0;">
+  <img src="ezgif-1bbd879d534535.gif" alt="Closing Animation 1" style="max-width: 48%; height: auto; border-radius: 10px;">
+  <img src="ezgif-1bd85d76b6ccae.gif" alt="Closing Animation 2" style="max-width: 48%; height: auto; border-radius: 10px;">
+    </div>
     Contact: evergreenetransit@gmail.com | 09155091742, 08101804244
   </footer>
 </body>
