Enlarged GIF index.html

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
   <header>
     <h1>Evergreen Eagle E-Transit</h1>
     <p>Smart, Affordable, Zero-Emission Transport for Federal University Lokoja</p>
+  <img src="ezgif-114cfb748a5bde.gif" alt="Electric Bus Intro" class="gif-large" />
     <div style="text-align: center; margin-top: 1rem;">
   <img src="ezgif-114cfb748a5bde.gif" alt="Electric Bus Animation" style="max-width: 100%; height: auto; border-radius: 10px;">
     </div>
@@ -107,14 +108,15 @@
     <p>
       Evergreen Eagle E-Transit is building a clean, affordable, and long-lasting electric bus system to serve students and staff of Federal University Lokoja. With zero emissions and luxurious 30–50 passenger capacity coaches, we are redefining sustainable campus mobility.
     </p>
+    <img src="ezgif-17cd8e78eb9fab.gif" alt="Electric Bus Feature" class="gif-large" />
     <div style="text-align: center; margin-top: 1rem;">
   <img src="ezgif-17cd8e78eb9fab.gif" alt="About Us Animation" style="max-width: 100%; height: auto; border-radius: 10px;">
     </div>
   </section>
 <section class="image-grid">
-  <img src="istockphoto-2181454736-612x612.webp" alt="Electric Bus 1" />
-  <img src="pexels-photo-5223501.jpeg" alt="Charging Station 1" />
-  <img src="photo-1509749837427-ac94a2553d0e.jpeg" alt="Electric Bus 2" />
+  <img src="photo-1698034303737-ec76ac6aa3fb" alt="Electric Bus 1" />
+  <img src="premium_photo-1664298159107-d579362ca341" alt="Charging Station 1" />
+  <img src="photo-1685645647479-a0232f3fec6d" alt="Electric Bus 2" />
 </section>
   <section>
     <h2>Why Evergreen?</h2>
@@ -124,6 +126,7 @@
       <li>Durable, long-term service value</li>
       <li>Smart AI-based route management (future integration)</li>
     </ul>
+    <img src="ezgif-15a035bf0b599a.gif" alt="Electric Bus Feature" class="gif-large" />
     <div style="text-align: center; margin-top: 1rem;">
   <img src="ezgif-15a035bf0b599a.gif" alt="Features Animation" style="max-width: 100%; height: auto; border-radius: 10px;">
     </div>
@@ -138,7 +141,8 @@
       Raise Type: <strong>Debt / Equity</strong>
     </p>
   </section>
-
+<img src="ezgif-1bbd879d534535.gif" alt="Campus Ride Experience" class="gif-large" />
+<img src="ezgif-1bd85d76b6ccae.gif" alt="Green Transit Vision" class="gif-large" />
   <section>
     <h2>Investor Application</h2>
     <form>
@@ -159,11 +163,9 @@
   <h2>Gallery</h2>
   <div class="image-grid">
     <img src="istockphoto-2181454736-612x612.webp" alt="Electric Bus" />
-    <img src="pexels-photo-5223501.jpeg" alt="Charging Station" />
     <img src="photo-1509749837427-ac94a2553d0e.jpeg" alt="Bus Interior" />
     <img src="photo-1572675339312-3e8b094a544d.jpeg" alt="Sustainable Transit" />
     <img src="photo-1639195046198-a73b6d2d9606.jpeg" alt="EV Transport" />
-    <img src="photo-1643617526836-fd5c8f3061fc.jpeg" alt="EV Charging" />
     <img src="photo-1685645647479-a0232f3fec6d.jpeg" alt="Transit System" />
     <img src="photo-1698034303737-ec76ac6aa3fb.jpeg" alt="Modern Buses" />
     <img src="premium_photo-1661916408325-5280388bf1e3.jpeg" alt="Transport Network" />
