--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <header>
     <h1>Evergreen Eagle E-Transit</h1>
     <p>Smart, Affordable, Zero-Emission Transport for Federal University Lokoja</p>
-  <img src="ezgif-114cfb748a5bde.gif" alt="Electric Bus Intro" class="gif-large" />
+  <img src="gif1.gif" alt="Electric Bus Intro" class="gif-large" />
     <div style="text-align: center; margin-top: 1rem;">
   <img src="ezgif-114cfb748a5bde.gif" alt="Electric Bus Animation" style="max-width: 100%; height: auto; border-radius: 10px;">
     </div>
@@ -108,7 +108,7 @@
     <p>
       Evergreen Eagle E-Transit is building a clean, affordable, and long-lasting electric bus system to serve students and staff of Federal University Lokoja. With zero emissions and luxurious 30–50 passenger capacity coaches, we are redefining sustainable campus mobility.
     </p>
-    <img src="gif1.gif" alt="Electric Bus Feature" class="gif-large" />
+    <img src="gif2.gif" alt="Electric Bus Feature" class="gif-large" />
     <div style="text-align: center; margin-top: 1rem;">
   <img src="ezgif-17cd8e78eb9fab.gif" alt="About Us Animation" style="max-width: 100%; height: auto; border-radius: 10px;">
     </div>
@@ -126,7 +126,7 @@
       <li>Durable, long-term service value</li>
       <li>Smart AI-based route management (future integration)</li>
     </ul>
-    <img src="gif2.gif" alt="Electric Bus Feature" class="gif-large" />
+    <img src="gif3.gif" alt="Electric Bus Feature" class="gif-large" />
     <div style="text-align: center; margin-top: 1rem;">
   <img src="ezgif-15a035bf0b599a.gif" alt="Features Animation" style="max-width: 100%; height: auto; border-radius: 10px;">
     </div>
@@ -141,8 +141,8 @@
       Raise Type: <strong>Debt / Equity</strong>
     </p>
   </section>
-<img src="gif3.gif" alt="Campus Ride Experience" class="gif-large" />
-<img src="gif4.gif" alt="Green Transit Vision" class="gif-large" />
+<img src="gif4.gif" alt="Campus Ride Experience" class="gif-large" />
+<img src="gif5.gif" alt="Green Transit Vision" class="gif-large" />
   <section>
     <h2>Investor Application</h2>
     <form>
