--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
     </div>
   </section>
 <section class="image-grid">
-  <img src="photo-1698034303737-ec76ac6aa3fb" alt="Electric Bus 1" />
-  <img src="premium_photo-1664298159107-d579362ca341" alt="Charging Station 1" />
-  <img src="photo-1685645647479-a0232f3fec6d" alt="Electric Bus 2" />
+  <img src="photo-1698034303737-ec76ac6aa3fb.jpeg" alt="Electric Bus 1" />
+  <img src="premium_photo-1664298159107-d579362ca341.jpeg" alt="Charging Station 1" />
+  <img src="photo-1685645647479-a0232f3fec6d.jpeg" alt="Electric Bus 2" />
 </section>
   <section>
     <h2>Why Evergreen?</h2>
