--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <header>
     <h1>Evergreen Eagle E-Transit</h1>
     <p>Smart, Affordable, Zero-Emission Transport for Federal University Lokoja</p>
-  <img src="gif1.gif" alt="Electric Bus Intro" class="gif-large" />
+  <img src="gif1.gif" alt="Electric Bus Animation" class="gif-large" />
     <div style="text-align: center; margin-top: 1rem;">
   <img src="ezgif-114cfb748a5bde.gif" alt="Electric Bus Animation" style="max-width: 100%; height: auto; border-radius: 10px;">
     </div>
